FINALLY. Got Deny-Latest-Image Tag working

--- a/OPA-Examples/Deny-Latest-Image-Tag/constraint.yaml
+++ b/OPA-Examples/Deny-Latest-Image-Tag/constraint.yaml
@@ -5,8 +5,9 @@ metadata:
 spec:
   enforcementAction: deny
   match:
+    excludedNamespaces: ["gatekeeper-system", "argocd"]
     kinds:
       - apiGroups: [""]
-        kinds: ["Pods"]
+        kinds: ["Pod"]
   parameters:
     message: "WHY DID YOU TRY!!"
