--- a/TEMP-APPSETS/git-appset.yaml
+++ b/TEMP-APPSETS/git-appset.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: ApplicationSet
 metadata:
   name: cluster-secretjobs-appset
-  namespace: akp-gitops
+  namespace: argocd
 spec:
   generators:
     - git:
