--- a/OPA-RUN/OPA-Gatekeeper-YAMLS/constrainttemplate-appset.yaml
+++ b/OPA-RUN/OPA-Gatekeeper-YAMLS/constrainttemplate-appset.yaml
@@ -14,7 +14,7 @@ spec:
 
         violation[{"msg": msg}] {
           name := input.review.object.metadata.name
-          endswith(name, "-appset")
+          not endswith(name, "-appset")
           msg := sprintf("Name should end with '-appset'. Name: <%v>", [name])
         }
 
