--- a/OPA-RUN/ArgoCD-Sample-Appsets/git-appset.yaml
+++ b/OPA-RUN/ArgoCD-Sample-Appsets/git-appset.yaml
@@ -14,11 +14,11 @@ spec:
     metadata:
       name: 'cluster-secretjobs-{{path.basename}}-{{name}}'
       labels:
-        kubernetes.cnp.io/app-type: cluster-secretjobs
-        kubernetes.cnp.io/environment: '{{metadata.labels.kubernetes.cnp.io/environment}}'
-        kubernetes.cnp.io/cluster.name: '{{path.basename}}'
-        kubernetes.cnp.io/cluster.region: '{{metadata.labels.kubernetes.cnp.io/cluster.region}}'
-        kubernetes.cnp.io/cluster.jurisdiction: '{{metadata.labels.kubernetes.cnp.io/cluster.jurisdiction}}'
+        kubernetes.io/app-type: cluster-secretjobs
+        kubernetes.io/environment: '{{metadata.labels.kubernetes.io/environment}}'
+        kubernetes.io/cluster.name: '{{path.basename}}'
+        kubernetes.io/cluster.region: '{{metadata.labels.kubernetes.io/cluster.region}}'
+        kubernetes.io/cluster.jurisdiction: '{{metadata.labels.kubernetes.io/cluster.jurisdiction}}'
     spec:
       project: default
       source:
