--- a/OPA-RUN/ArgoCD-Sample-Appsets/matrix-appset.yaml
+++ b/OPA-RUN/ArgoCD-Sample-Appsets/matrix-appset.yaml
@@ -15,22 +15,22 @@ spec:
           - clusters:
               selector:
                 matchLabels:
-                  kubernetes.cnp.io/environment: admin
-                  kubernetes.cnp.io/cluster.jurisdiction: tkgi
+                  kubernetes.io/environment: admin
+                  kubernetes.io/cluster.jurisdiction: tkgi
                   argocd.argoproj.io/secret-type: cluster
                 matchExpressions:
-                  - key: kubernetes.cnp.io/cluster.region
+                  - key: kubernetes.io/cluster.region
                     operator: In
                     values: ["hal", "ewd"]
   template:
     metadata:
       name: 'cluster-secretjobs-{{path.basename}}-{{name}}'
       labels:
-        kubernetes.cnp.io/app-type: cluster-secretjobs
-        kubernetes.cnp.io/environment: '{{metadata.labels.kubernetes.cnp.io/environment}}'
-        kubernetes.cnp.io/cluster.name: '{{path.basename}}'
-        kubernetes.cnp.io/cluster.region: '{{metadata.labels.kubernetes.cnp.io/cluster.region}}'
-        kubernetes.cnp.io/cluster.jurisdiction: '{{metadata.labels.kubernetes.cnp.io/cluster.jurisdiction}}'
+        kubernetes.io/app-type: cluster-secretjobs
+        kubernetes.io/environment: '{{metadata.labels.kubernetes.io/environment}}'
+        kubernetes.io/cluster.name: '{{path.basename}}'
+        kubernetes.io/cluster.region: '{{metadata.labels.kubernetes.io/cluster.region}}'
+        kubernetes.io/cluster.jurisdiction: '{{metadata.labels.kubernetes.io/cluster.jurisdiction}}'
     spec:
       project: default
       source:
